# TraSMAPy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.rst  conf.py  index.rst  install.rst  quickstart.rst  requirements.txt  vehicle_class.puml
docs/source/: modules.rst  trasmapy.rst
example/: hello.net.xml  runner.py
examples/busLane/: config.sumocfg  network.net.xml  runner.py
examples/rand/: rand.sumocfg  runner.py  tripinfo.xml
examples/simple/: hello.additionals.xml  hello.net.xml  hello.rou.xml  runner.py
examples/torfa/: build.bat  osm.bus.trips.xml  osm.motorcycle.trips.xml  osm.net.xml  osm.netccfg  osm.passenger.trips.xml  osm.poly.xml  osm.polycfg  osm.sumocfg  osm.truck.trips.xml  osm_pt.rou.xml  osm_ptlines.xml  osm_stops.add.xml  runner.py  stopinfos.xml  tripinfo.xml  trips.trips.xml  vehroutes.xml
group3/: assignment_1.md
hello/: hello.net.xml
irao_tests/: TraSMAPy.py  hello.additionals.xml  hello.net.xml  hello.rou.xml  hello.sumocfg  runner.py  tripinfo.xml
simulation/: .gitignore  LICENSE  README.md  generate_charts.py  requirements.txt  run.py  sim.sumocfg
simulation/advanced_uvar/: runner.py  sim.sumocfg  uvar_toll.py
simulation/config/: bus.stops.xml  detectors.xml  measurements.xml  net.xml  parking.routers.xml  parking.xml  rou.xml
simulation/evehicle_uvar/: run.py  sim.sumocfg  trasmapy_utils.py
simulation/scripts/: attributes.sh  dump_dense.sh  dump_emissions.sh  dumps.sh
simulation/simple_uvar/: haha.xml  runner.py  sim.sumocfg  tripinfo.xml  (+9 more)
src/: .gitignore
traffic_lights/: runner.py  tripinfo.xml
(+59 files in other folders)
